--- a/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
+++ b/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.36.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\FYF\GitHub\MyCode\MyBalance-200318\MDK-ARM\New_F103C8.uvprojx
+D:\FYF\GitHub\MyCode\MyBalance-Hal_I2c\MDK-ARM\New_F103C8.uvprojx
 Project File Date:  07/26/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin'
 Build target 'New_F103C8'
-compiling freertos.c...
+compiling main.c...
 linking...
-Program Size: Code=33684 RO-data=6532 RW-data=392 ZI-data=9376  
+Program Size: Code=32192 RO-data=3232 RW-data=340 ZI-data=9460  
 FromELF: creating hex file...
 "New_F103C8\New_F103C8.axf" - 0 Error(s), 0 Warning(s).
 
