--- a/F767_RTOS_LWIP/MDK-ARM/F767_ETH0711/F767_ETH0711.build_log.htm
+++ b/F767_RTOS_LWIP/MDK-ARM/F767_ETH0711/F767_ETH0711.build_log.htm
@@ -27,19 +27,12 @@ Project File Date:  07/31/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'F767_ETH0711'
-compiling mqttclient.c...
-..\MQTTPacket\mqttclient.h(43): error:  #40: expected an identifier
-  #define
-..\MQTTPacket\mqttclient.h(44): error:  #40: expected an identifier
-  #define
-..\MQTTPacket\mqttclient.c: 0 warnings, 2 errors
 compiling freertos.c...
-..\MQTTPacket\mqttclient.h(43): error:  #40: expected an identifier
-  #define
-..\MQTTPacket\mqttclient.h(44): error:  #40: expected an identifier
-  #define
-../Core/Src/freertos.c: 0 warnings, 2 errors
-"F767_ETH0711\F767_ETH0711.axf" - 4 Error(s), 0 Warning(s).
+compiling mqttclient.c...
+linking...
+Program Size: Code=135360 RO-data=1888 RW-data=496 ZI-data=57736  
+FromELF: creating hex file...
+"F767_ETH0711\F767_ETH0711.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -62,7 +55,6 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Target not created.
 Build Time Elapsed:  00:00:04
 </pre>
 </body>
