--- a/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
+++ b/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
@@ -3,30 +3,34 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: ¦ÌVision V5.27.1.0
+IDE-Version: ¦ÌVision V5.29.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: A AA, AAA, LIC=NHY30-BEJWY-ILKCB-2TK84-LF284-81ISS
+License Information: A AA, AAA, LIC=BL22Z-JA1WJ-344ST-RA00K-CELBK-7AHBQ
  
 Tool Versions:
-Toolchain:       MDK-ARM Professional  Version: 5.27.1.0
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+Toolchain:       MDK-ARM Professional  Version: 5.29.0.0
+Toolchain Path:  D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 6 (build 750)
 Assembler:       Armasm.exe V5.06 update 6 (build 750)
 Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
 Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
-CPU DLL:         SARMCM3.DLL V5.27.1.0
-Dialog DLL:      DCM.DLL V1.17.2.0
-Target DLL:      Segger\JL2CM3.dll V2.99.35.0
-Dialog DLL:      TCM.DLL V1.36.1.0
+CPU DLL:         SARMCM3.DLL V5.29.0.0
+Dialog DLL:      DCM.DLL V1.17.3.0
+Target DLL:      Segger\JL2CM3.dll V2.99.36.0
+Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\FYF\GitHub\01MyCode\MyBalance-Hal_I2c\MDK-ARM\New_F103C8.uvprojx
-Project File Date:  07/27/2020
+D:\FYF\GitHub\MyCode\MyBalance-Hal_I2c\MDK-ARM\New_F103C8.uvprojx
+Project File Date:  08/01/2020
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin'
 Build target 'New_F103C8'
+compiling main.c...
+linking...
+Program Size: Code=32676 RO-data=3228 RW-data=328 ZI-data=9456  
+FromELF: creating hex file...
 "New_F103C8\New_F103C8.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -38,10 +42,10 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_New_F103C8
-  C:\Users\yufei.fan\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  D:\Program Files (x86)\KEIL\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
