--- a/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
+++ b/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  08/01/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin'
 Build target 'New_F103C8'
-compiling main.c...
+compiling freertos.c...
 linking...
-Program Size: Code=32676 RO-data=3228 RW-data=328 ZI-data=9456  
+Program Size: Code=32580 RO-data=3228 RW-data=328 ZI-data=9456  
 FromELF: creating hex file...
 "New_F103C8\New_F103C8.axf" - 0 Error(s), 0 Warning(s).
 
