--- a/BootLoader_F767/MDK-ARM/BootLoader_F767/BootLoader_F767.build_log.htm
+++ b/BootLoader_F767/MDK-ARM/BootLoader_F767/BootLoader_F767.build_log.htm
@@ -22,38 +22,14 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 D:\FYF\GitHub\01MyCode\BootLoader_F767\MDK-ARM\BootLoader_F767.uvprojx
-Project File Date:  08/25/2020
+Project File Date:  08/28/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BootLoader_F767'
-compiling gpio.c...
-compiling dma.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling main.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_it.c...
-compiling usart.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling system_stm32f7xx.c...
+compiling app_iap.c...
 linking...
-Program Size: Code=7160 RO-data=568 RW-data=16 ZI-data=4416  
+Program Size: Code=13444 RO-data=588 RW-data=44 ZI-data=23868  
 FromELF: creating hex file...
 "BootLoader_F767\BootLoader_F767.axf" - 0 Error(s), 0 Warning(s).
 
@@ -78,7 +54,7 @@ Package Vendor: STMicroelectronics
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
