--- a/F10x/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
+++ b/F10x/MyBalance-Hal_I2c/MDK-ARM/New_F103C8/New_F103C8.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.29.0.0
 Copyright (C) 2019 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: A AA, AAA, LIC=Z3CX7-E1Y31-C05N2-9ET1L-I7FGA-NVRDT
+License Information: A AA, AAA, LIC=BL22Z-JA1WJ-344ST-RA00K-CELBK-7AHBQ
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.29.0.0
-Toolchain Path:  D:\Program Files\Keil_v5\ARM\ARMCC\Bin
+Toolchain Path:  D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 6 (build 750)
 Assembler:       Armasm.exe V5.06 update 6 (build 750)
 Linker/Locator:  ArmLink.exe V5.06 update 6 (build 750)
@@ -21,12 +21,61 @@ Target DLL:      Segger\JL2CM3.dll V2.99.36.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\FYF\GitHub\01MyCode\F10x\MyBalance-Hal_I2c\MDK-ARM\New_F103C8.uvprojx
-Project File Date:  10/09/2020
+D:\FYF\GitHub\MyCode\F10x\MyBalance-Hal_I2c\MDK-ARM\New_F103C8.uvprojx
+Project File Date:  10/11/2020
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files (x86)\KEIL\ARM\ARMCC\Bin'
 Build target 'New_F103C8'
+assembling startup_stm32f103xb.s...
+compiling tool.c...
+compiling pid.c...
+compiling adc.c...
+compiling test.c...
+compiling gpio.c...
+compiling tim.c...
+compiling usart.c...
+compiling freertos.c...
+compiling filter.c...
+compiling stm32f1xx_hal_msp.c...
+compiling i2c.c...
+compiling croutine.c...
+compiling main.c...
+compiling event_groups.c...
+compiling list.c...
+compiling stm32f1xx_it.c...
+compiling queue.c...
+compiling stream_buffer.c...
+compiling timers.c...
+compiling heap_4.c...
+compiling tasks.c...
+compiling cmsis_os.c...
+compiling port.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_adc_ex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling myiic.c...
+compiling stm32f1xx_hal_adc.c...
+compiling oled.c...
+compiling mpu6050.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling cpu_utils.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_i2c.c...
+compiling stm32f1xx_hal_tim.c...
+linking...
+Program Size: Code=32580 RO-data=3228 RW-data=328 ZI-data=9456  
+FromELF: creating hex file...
 "New_F103C8\New_F103C8.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -38,10 +87,10 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_New_F103C8
-  D:\Program Files\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
+  D:\Program Files (x86)\KEIL\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:18
 </pre>
 </body>
 </html>
