--- a/F41x/TBoxSdTest/MDK-ARM/TBoxSdTest/TBoxSdTest.build_log.htm
+++ b/F41x/TBoxSdTest/MDK-ARM/TBoxSdTest/TBoxSdTest.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
 D:\FYF\GitHub\01MyCode\F41x\TBoxSdTest\MDK-ARM\TBoxSdTest.uvprojx
-Project File Date:  11/11/2020
+Project File Date:  11/19/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Program Files\Keil_v5\ARM\ARMCC\Bin'
 Build target 'TBoxSdTest'
-compiling main.c...
+compiling system_stm32f4xx.c...
 linking...
-Program Size: Code=15104 RO-data=528 RW-data=92 ZI-data=11012  
+Program Size: Code=38532 RO-data=175676 RW-data=168 ZI-data=129080  
 FromELF: creating hex file...
 After Build - User command #1: fromelf.exe --bin -o "TBoxSdTest\TBoxSdTest.bin" "TBoxSdTest\TBoxSdTest.axf"
 "TBoxSdTest\TBoxSdTest.axf" - 0 Error(s), 0 Warning(s).
@@ -55,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
